--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="cards">
         <div class="card">
-          <img src="../assets/flower2.jpg" alt="product" class="card_img" />
+          <img src="/assets/flower2.jpg" alt="product" class="card_img" />
           <h2 class="card_title">Flowers</h2>
           <p class="card_text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -47,7 +47,7 @@
           <div class="card_buttons">
             <button class="card_button">Додати в кошик</button>
             <button class="card_favorite">
-              <img src="../assets/heart.svg" height="20" alt="" />
+              <img src="/assets/heart.svg" height="20" alt="" />
             </button>
           </div>
         </div>
