--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <ul class="nav_list">
           <li class="nav_item"><a class="nav_link" href="#">Головна</a></li>
           <li class="nav_item dropdown">
-            <a class="nav_link" href="#">Продукти</a>
+            <input type="checkbox" id="toggle-products" />
+            <label class="nav_link" for="toggle-products">Продукти</label>
             <ul class="dropdown-menu">
               <li><a class="dropdown-link" href="#">Ноутбуки</a></li>
               <li><a class="dropdown-link" href="#">Телефони</a></li>
@@ -21,7 +22,8 @@
             </ul>
           </li>
           <li class="nav_item dropdown">
-            <a class="nav_link" href="#">Послуги</a>
+            <input type="checkbox" id="toggle-services" />
+            <label class="nav_link" for="toggle-services">Послуги</label>
             <ul class="dropdown-menu">
               <li><a class="dropdown-link" href="#">Доставка</a></li>
               <li><a class="dropdown-link" href="#">Гарантія</a></li>
